--- a/StravaDemo/Base.lproj/Main.storyboard
+++ b/StravaDemo/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="qTC-bS-5J0">
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -36,13 +35,40 @@
                                     <action selector="accessButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6I9-0Z-aI1"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Status Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pFq-7Q-RRV">
+                                <rect key="frame" x="40" y="197" width="520" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1So-dd-0Zh">
+                                <rect key="frame" x="261" y="226" width="78" height="30"/>
+                                <state key="normal" title="Get Athlete"/>
+                                <connections>
+                                    <action selector="getAthleteTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xLv-gG-W7y"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1X-0c-xTe">
+                                <rect key="frame" x="241" y="264" width="118" height="30"/>
+                                <state key="normal" title="Get Athlete By ID"/>
+                                <connections>
+                                    <action selector="getAthleteByIDButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Eyh-zw-qnU"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="1So-dd-0Zh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4cP-Mj-g9f"/>
+                            <constraint firstItem="W1X-0c-xTe" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8rH-P8-Gsr"/>
                             <constraint firstItem="ddg-KI-KWa" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Chk-ZB-Al4"/>
+                            <constraint firstItem="pFq-7Q-RRV" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="Dx4-GR-6bX"/>
                             <constraint firstItem="0uV-BB-IN0" firstAttribute="top" secondItem="ddg-KI-KWa" secondAttribute="bottom" constant="8" id="LhU-XL-01B"/>
+                            <constraint firstItem="pFq-7Q-RRV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LpA-Qv-0sj"/>
+                            <constraint firstItem="1So-dd-0Zh" firstAttribute="top" secondItem="pFq-7Q-RRV" secondAttribute="bottom" constant="8" id="MGf-yG-GWF"/>
                             <constraint firstItem="0uV-BB-IN0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="PW8-Ex-hRW"/>
+                            <constraint firstItem="W1X-0c-xTe" firstAttribute="top" secondItem="1So-dd-0Zh" secondAttribute="bottom" constant="8" id="PfO-RD-vAn"/>
                             <constraint firstItem="ddg-KI-KWa" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="b1I-BM-NMh"/>
+                            <constraint firstItem="pFq-7Q-RRV" firstAttribute="top" secondItem="SUB-aL-BDO" secondAttribute="bottom" constant="8" id="cPs-7L-Kx4"/>
                             <constraint firstItem="0uV-BB-IN0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="d30-8o-sUc"/>
                             <constraint firstItem="ddg-KI-KWa" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="mIn-ef-NgJ"/>
                             <constraint firstItem="SUB-aL-BDO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rns-rF-nDH"/>
@@ -56,6 +82,9 @@
                         <outlet property="accessButton" destination="SUB-aL-BDO" id="GpP-HE-ReO"/>
                         <outlet property="clientIdTextField" destination="ddg-KI-KWa" id="2xz-Kj-go7"/>
                         <outlet property="clientSecretTextField" destination="0uV-BB-IN0" id="SOf-ko-A4S"/>
+                        <outlet property="getAthleteButton" destination="1So-dd-0Zh" id="fLX-9C-sSZ"/>
+                        <outlet property="getAthleteByIDButton" destination="W1X-0c-xTe" id="ecM-TN-JEN"/>
+                        <outlet property="statusLabel" destination="pFq-7Q-RRV" id="lSy-lk-H3t"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
